# atlas

./: .env.example  .gitignore  NOW.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_place_iso2.py  0003_visa_status_enum.py  0004_place_iso3.py  0005_destination_fields.py  0006_daily_budget.py
backend/app/: database.py  inheritance.py  main.py  seed.py  seed_italy.py  vocab.py
backend/app/core/: config.py
backend/app/loaders/: __init__.py  cost_src.py  countries_src.py  geo.py  http.py  names_he.py  seed_countries.py  visa_src.py
backend/app/models/: __init__.py  enums.py  place.py  provenance.py  saved_place.py  user.py
backend/app/routers/: favorites.py  maps.py  places.py
backend/tests/: test_inheritance.py  test_loaders.py  test_vocab.py
infra/nginx/: atlas.conf
web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml
web/public/: country_label_points.geojson  ne_110m_admin0.geojson
web/scripts/: build_label_points.mjs  patch_israel_westbank.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/map/: CompareTray.module.css  CompareTray.tsx  CompareView.module.css  CompareView.tsx  DestinationCard.module.css  DestinationCard.tsx  DestinationPanel.module.css  DestinationPanel.tsx  FavoritesSheet.module.css  FavoritesSheet.tsx  Legend.module.css  Legend.tsx  MapView.module.css  MapView.tsx  MetricToggle.module.css  MetricToggle.tsx  PlaceCard.module.css  PlaceCard.tsx  ProvenanceBadge.module.css  compare.ts  (+12 more)
